5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3465/executions/1757_2102.log
== SUBMITION (2019-05-29 10:16:11) 
-- CODE:
from numpy import *
v = array(eval(input("")))
v2 = array([0]*len(v))
v2 = [v[i] for i in range(len(v2)) if v[i]%2==0]
print(v2)
-- EXECUTION TIME:
0.510689
-- TEST CASE 1:
---- input:
[11,21,31,41,51]
---- correct output:
[0 0 0 0 0]
---- user output:
[]
-- TEST CASE 2:
---- input:
[12,22,32,42,52]
---- correct output:
[12 22 32 42 52]
---- user output:
[12, 22, 32, 42, 52]
-- TEST CASE 3:
---- input:
[1,3,5,2,4,6]
---- correct output:
[0 0 0 2 4 6]
---- user output:
[2, 4, 6]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:16:13) 
-- CODE:
from numpy import *
v = array(eval(input("")))
v2 = array([0]*len(v))
v2 = [v[i] for i in range(len(v2)) if v[i]%2==0]
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:18:50) 
-- CODE:
from numpy import *
v = array(eval(input("")))
v2 = [v[i] for i in range(len(v2)) if v[i]%2!=0 v[i] = 0]
print(v2)
-- ERROR:
File "XXXX", line 3
    v2 = [v[i] for i in range(len(v2)) if v[i]%2!=0 v[i] = 0]
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:19:43) 
-- CODE:
from numpy import *
v = array(eval(input("")))
for i in range(len(v)):
	if v[i]%2!=0:
		v[i]=0
print(v)
-- EXECUTION TIME:
0.372363
-- TEST CASE 1:
---- input:
[11,21,31,41,51]
---- correct output:
[0 0 0 0 0]
---- user output:
[0 0 0 0 0]
-- TEST CASE 2:
---- input:
[12,22,32,42,52]
---- correct output:
[12 22 32 42 52]
---- user output:
[12 22 32 42 52]
-- TEST CASE 3:
---- input:
[1,3,5,2,4,6]
---- correct output:
[0 0 0 2 4 6]
---- user output:
[0 0 0 2 4 6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
